--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+.outer-border{
+    /*width: 300px;*/
+    border-color: rgb(0,0,0);
+    border-width: 15px;
+    /*!*padding: 10px;*!*/
+    /*border-radius: 0.375rem;*/
+}
+
+/*border-x-4 border-yellow-50*/
